[gd_scene load_steps=10 format=3 uid="uid://cd5jwffggrspi"]

[ext_resource type="PackedScene" uid="uid://uthrp0a0t4to" path="res://scenes/Actor.tscn" id="1_7iqmi"]
[ext_resource type="Resource" uid="uid://c0nost4wy2tim" path="res://abstract/resources/actordata/default.tres" id="2_ycimw"]
[ext_resource type="PackedScene" uid="uid://cyi63dudfs0vg" path="res://abstract/scenes/models/test/mixamo_base_03_04.tscn" id="3_bl5n5"]
[ext_resource type="Script" path="res://scripts/class_SpringArm.gd" id="4_8ul6a"]
[ext_resource type="Script" path="res://scripts/class_Controller_Actor_Player.gd" id="5_qlxd5"]
[ext_resource type="PackedScene" uid="uid://rasb6xdudjnp" path="res://abstract/scenes/behaviors/PlayerBehavior.tscn" id="6_q8ly1"]
[ext_resource type="Texture2D" uid="uid://dr71psnrikn6m" path="res://icon.svg" id="7_exr85"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_770xo"]
height = 16.0

[sub_resource type="SphereShape3D" id="SphereShape3D_swf0b"]
margin = 0.5
radius = 1.0

[node name="Player" node_paths=PackedStringArray("Controller") groups=["PLAYER"] instance=ExtResource("1_7iqmi")]
Controller = NodePath("PlayerController")
data = ExtResource("2_ycimw")

[node name="Pivot" parent="." index="1" node_paths=PackedStringArray("Model")]
Model = NodePath("mixamo_base_03_04")

[node name="mixamo_base_03_04" parent="Pivot" index="0" instance=ExtResource("3_bl5n5")]

[node name="PartyPositions" type="Node3D" parent="Pivot" index="3"]

[node name="Marker3D" type="Marker3D" parent="Pivot/PartyPositions" index="0"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 2, 0, 0)

[node name="Marker3D2" type="Marker3D" parent="Pivot/PartyPositions" index="1"]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, -2, 0, 0)

[node name="SpringArm" type="Node3D" parent="." index="4" node_paths=PackedStringArray("RayCast", "Camera", "TargetArea", "TargetRay")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.67696, 0)
script = ExtResource("4_8ul6a")
RayCast = NodePath("Yaw/Pitch/SpringArm3D")
Camera = NodePath("Camera3D")
TargetArea = NodePath("Yaw/Pitch/TargetArea")
TargetRay = NodePath("Yaw/Pitch/TargetArea/RayCast3D")
metadata/_edit_group_ = true

[node name="Camera3D" type="Camera3D" parent="SpringArm" index="0"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 3.35392, 0)
top_level = true
current = true
fov = 70.0

[node name="Yaw" type="Node3D" parent="SpringArm" index="1"]

[node name="Pitch" type="Node3D" parent="SpringArm/Yaw" index="0"]

[node name="TargetArea" type="Area3D" parent="SpringArm/Yaw/Pitch" index="0"]
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="SpringArm/Yaw/Pitch/TargetArea" index="0"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 8)
shape = SubResource("CylinderShape3D_770xo")

[node name="RayCast3D" type="RayCast3D" parent="SpringArm/Yaw/Pitch/TargetArea" index="1"]
target_position = Vector3(0, 0, 16)

[node name="SpringArm3D" type="SpringArm3D" parent="SpringArm/Yaw/Pitch" index="1"]
shape = SubResource("SphereShape3D_swf0b")
spring_length = -3.0
margin = 0.5

[node name="CameraPosition" type="Marker3D" parent="SpringArm/Yaw/Pitch/SpringArm3D" index="0"]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, 0, 0)

[node name="PlayerController" type="Node" parent="." index="5" node_paths=PackedStringArray("SpringArm", "Camera", "TargetClearDelay", "TargetSprite", "PartyPositions", "AttackDelay", "DodgeDelay", "SprintDelay", "Behavior", "TargetPosition")]
script = ExtResource("5_qlxd5")
SpringArm = NodePath("../SpringArm")
Camera = NodePath("../SpringArm/Camera3D")
TargetClearDelay = NodePath("../TargetClearDelay")
TargetSprite = NodePath("../TargetSprite")
PartyPositions = NodePath("../Pivot/PartyPositions")
AttackDelay = NodePath("../AttackDelay")
DodgeDelay = NodePath("../DodgeDelay")
SprintDelay = NodePath("../SprintDelay")
Behavior = NodePath("../PlayerBehavior")
TargetPosition = NodePath("../TargetPosition")
enabled = true

[node name="PlayerBehavior" parent="." index="6" node_paths=PackedStringArray("Actor") instance=ExtResource("6_q8ly1")]
Actor = NodePath("..")

[node name="TargetClearDelay" type="Timer" parent="." index="15"]
wait_time = 0.5
one_shot = true

[node name="TargetSprite" type="Sprite2D" parent="." index="16"]
scale = Vector2(0.3, 0.3)
texture = ExtResource("7_exr85")
